// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ストレージあり 1`] = `
<a
  className="iconModule"
  href="/cart"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="cartCounter"
  >
    5
  </div>
  <img
    alt=""
    className="iconimg"
    data-nimg="1"
    decoding="async"
    height={25}
    loading="lazy"
    onError={[Function]}
    onLoad={[Function]}
    src="/_next/image?url=%2Fimages%2Ficon%2Fcart.png&w=64&q=75"
    srcSet="/_next/image?url=%2Fimages%2Ficon%2Fcart.png&w=32&q=75 1x, /_next/image?url=%2Fimages%2Ficon%2Fcart.png&w=64&q=75 2x"
    style={
      {
        "color": "transparent",
      }
    }
    width={25}
  />
  <span
    className="menuLabel inline-block whitespace-nowrap"
  >
    カート
  </span>
</a>
`;

exports[`ストレージなし 1`] = `
<a
  className="iconModule"
  href="/cart"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
>
  <img
    alt=""
    className="iconimg"
    data-nimg="1"
    decoding="async"
    height={25}
    loading="lazy"
    onError={[Function]}
    onLoad={[Function]}
    src="/_next/image?url=%2Fimages%2Ficon%2Fcart.png&w=64&q=75"
    srcSet="/_next/image?url=%2Fimages%2Ficon%2Fcart.png&w=32&q=75 1x, /_next/image?url=%2Fimages%2Ficon%2Fcart.png&w=64&q=75 2x"
    style={
      {
        "color": "transparent",
      }
    }
    width={25}
  />
  <span
    className="menuLabel inline-block whitespace-nowrap"
  >
    カート
  </span>
</a>
`;
